Prefer new table interfaces in BrowserAccessibilityCocoa

BrowserAccessibilityCocoa still had some code that accessed
table attributes directly, most notably in
AXCellForColumnAndRow, which VoiceOver uses extensively
when navigating a table. Switch the code to use the
AXTableInfo-based computed table attributes instead,
which is not only more correct but a lot more compact, too.

This fixes a bug with a table that sets display:block
on some table elements, which led the Blink table code
to compute the wrong number of rows and columns for
the table.

This patch adds a new browser test for
BrowserAccessibilityCocoa to cover this case and
prevent future regressions.

Based on: http://crrev.com/c/1145769

Bug: 892060,832289
Change-Id: Icc5b5c305a385a2cb5f24155bfc8bd28641c85da
Reviewed-on: https://chromium-review.googlesource.com/c/1290518
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: David Tseng <dtseng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602043}
Former-commit-id: 585dd1d54cb3f8b8f7fc335a8275224fb89ea117